Pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-app
spec:
  containers:
  - name: my-container
    image: nginx:1.21.6
    ports:
    - containerPort: 80

-----------------------------------------------------------------------------

apiVersion: v1
kind: Pod
metadata:
  name: my-complex-pod
  labels:
    app: my-complex-app
spec:
  containers:
  - name: my-complex-container
    image: nginx:1.21.6
    ports:
    - containerPort: 80
    resources:
      limits:
        memory: "256Mi"
        cpu: "500m"
      requests:
        memory: "128Mi"
        cpu: "250m"
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: my-volume
  volumes:
  - name: my-volume
    hostPath:
      path: /data
