Service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

-----------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  name: my-complex-service
  labels:
    app: my-complex-app
spec:
  selector:
    app: my-complex-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  - protocol: TCP
    port: 443
    targetPort: 8443
  type: LoadBalancer
